<resources>

    <string name="app_name">TicketFlex</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">TicketFlex</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_events_admin">Administer My Events</string>
    <string name="title_activity_event_admin">Event Admin</string>
	<string name="title_activity_manage_event">Create an Event</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_start_time">Start Time</string>
    <string name="placeholder_end_time">End Time</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_description">Description</string>
    <string name="placeholder_price">Ticket Price</string>
    <string name="placeholder_capacity">Maximum Capacity</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_loginfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_loginfragment_logged_in">Logged In</string>
    <string name="com_facebook_loginfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="login_instructions"></string>
    <string name="login_button">Login with Facebook</string>
    <string name="logout_button">Logout</string>
    <string name="app_id">129035333910455</string>
    <string name="title_activity_manage_event">Manage Event</string>
    <string name="title_activity_events_index">All Events</string>
    <string name="title_activity_my_tickets">My Tickets</string>
    <string name="title_activity_ticket">Ticket</string>
    <string name="button_login">Login</string>
    <string name="button_my_tickets">My Tickets</string>
    <string name="button_events_index">See All Events</string>
    <string name="button_manage_event">Manage Event</string>
    <string name="button_events_admin">Administer My Events</string>
    <string name="button_sell_ticket">Sell Ticket</string>
	<string name="button_cancel">Cancel</string>
	<string name="sell_to_public_instructions">Sell this ticket for $</string>
	<string name="button_scan_ticket">Scan Ticket</string>
	<string name="button_edit_event">Edit Event</string>
	<string name="button_admit_ticket">Admit</string>
	<string name="button_decline_ticket">Decline</string>
	<string name="menu_add">Add</string>
	<string name="button_show_ticket">Show Ticket</string>
	<string name="button_buy_ticket">Buy New</string>
	<string name="heading_guest_list">GUEST LIST</string>
	<string name="placeholder_start_date">Date</string>
	<string name="button_unsell_ticket">Unsell Ticket</string>
	<string name="button_event_details">View Event</string>
	<string name="button_buy_existing_ticket">Buy Existing</string>
	<string name="title_activity_buy_existing_ticket">Buy Existing Ticket</string>
	
</resources>