<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_event_admin_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e9e9e9" >

        <Button
            android:id="@+id/button_scan_ticket"
            android:layout_weight=".50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
    		android:paddingLeft="18dp"
    		android:paddingRight="18dp"
            android:text="@string/button_scan_ticket"
    		style="?android:attr/borderlessButtonStyle" />
        
		<View
		    android:id="@+id/vertical_divider"
		    android:layout_width="1dip"
		    android:layout_height="match_parent"
		    android:layout_marginBottom="8dp"
		    android:layout_marginTop="8dp"
		    android:background="#bbb" />

        <Button
            android:id="@+id/button_event_details"
            android:layout_weight=".50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
    		android:paddingLeft="12dp"
    		android:paddingRight="12dp"
            android:text="@string/button_event_details"
    		style="?android:attr/borderlessButtonStyle" />
        
		<View
		    android:id="@+id/vertical_divider2"
		    android:layout_width="1dip"
		    android:layout_height="match_parent"
		    android:layout_marginBottom="8dp"
		    android:layout_marginTop="8dp"
		    android:background="#bbb" />
  
      <!-- <Button
            android:id="@+id/button_edit_event"
            android:layout_weight=".33"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
    		android:paddingLeft="18dp"
    		android:paddingRight="18dp"
            android:text="@string/button_edit_event"
    		style="?android:attr/borderlessButtonStyle" /> -->
    </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#aaa"
        android:gravity="center_vertical" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff"
        android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingBottom="3dp"
	        android:paddingLeft="6dp"
	        android:text="@string/heading_guest_list"
	        android:textColor="#aaa"
	        android:textSize="16dp"
	        android:textStyle="bold" />
	
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="#aaa"
		    android:gravity="center_vertical" />
	
	    <ListView
	        android:id="@+id/event_admin_guest_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	    </ListView>
	</LinearLayout>

</LinearLayout>